project(ch1-Array-Strings)

add_executable(1.1IsUnique 1.1IsUnique.cpp)
add_executable(1.2Permutation 1.2Permutation.cpp)
add_executable(1.3Urlify 1.3Urlify.cpp)
add_executable(1.4PalindromePermutation 1.4PalindromePermutation.cpp)
add_executable(1.5OneEdit 1.5OneEdit.cpp)
add_executable(1.6StringCompress 1.6StringCompress.cpp)
add_executable(1.7RotateMatrix 1.7RotateMatrix.cpp)
add_executable(1.8ZeroMatrix 1.8ZeroMatrix.cpp)
add_executable(1.9StringRotate 1.9StringRotate.cpp)
